# baxter_simple_sim

./: .gitmodules  CMakeLists.txt  README.md  baxter_config.rviz  ik_client.py  package.xml  ros2_bridge.py  simple_sim.py  simulation.launch
include/baxter_simple_sim/: baxter_cppkdl.h
launch/: left_cmd.yaml  right_cmd.yaml  simulation.launch
src/: arm_bridge.py  baxter_cppkdl.cpp  ik_service.cpp
