<?xml version="1.0"?>
<package format="2">
  <name>baxter_simple_sim</name>
  <version>0.1.0</version>
  <description>Baxter kinematic simulation with IK service</description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>baxter_core_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>

</package>
